walkgrid/src/main.css
.space {
    width: 32px;
    height: 32px;
    background-color: orange;
    /* border: 5px solid black; */
    outline:1px solid black;
}
.row {
    display: flex;
}
.food {
    background-color: green;
}
.you {
    background-color: blue;
}
.enemy {
    background-color: purple;
}
.Announcement { 
    position: fixed;
    top: 0vh;
    left: 0vw; 
    /* width: 220px; */
    /* height: 40px; */
    background-color: rgba(255, 255, 255, 0.8);
}
.grid {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-left: 5px solid green;
    border-right: 5px solid yellow;
}

.outcome {
    background-color: yellow;
    text-align: center;
    margin: 0;

}
.outOfBounds {
    background-color: red;
}
@media screen
  and (max-device-width: 500px)
   {
    body {
        background-color: white;
    }
    .GridChat {
        flex-direction: column;
    }
    .hidden {
        display: none;
    }
    .MobileControls {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        align-items: stretch;
    }
    .MobileControls :nth-child(3n){
        text-align: right;
    }
    .MobileControls :nth-child(2n){
        text-align: center;
    }
    .MobileButton {
        /* flex-grow: 1; */
        /* background-color: yellow; */
        font-size: xx-large;
        border: 1px solid black;
    }
    .up {
        position: absolute;
        top: -400px;
    }
    .griddetected {
        height: 2em;
    }
    .outcome {
        text-align: right;
    }

}

